<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DroidiaryActivity!</string>
    <string name="app_name">Droidiary</string>
    <string name="titolo">Droidiary</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Entra</string>
    <string name="titoloRubrica">Menù Rubrica</string><string name="reset">Cancella</string>
    <string name="pass">Password</string>
    <string name="titoloAppuntamenti">Menù Appuntamenti</string><string name="copyright">App realizzata da Pirone Mario e Addesa Salvatore</string>
    <string name="menunuovoappuntamento">Nuovo Appuntamento</string>
    <string name="menumodificaappuntamento">Modifica Appuntamento</string>
    <string name="menueeliminaappuntamento">Elimina Appuntamento</string>
    <string name="menucercaappuntamento">Cerca Appuntamento</string>
    <string name="titolomenu">Menù Principale</string>
    <string name="menunuovocontatto">Nuovo Contatto</string>
    <string name="menumodificacontatto">Modifica Contatto</string>
    <string name="menueliminacontatto">Elimina Contatto</string>
    <string name="menuricercacontatto">Ricerca Contatto</string>
    <string name="menuappuntamenti">Appuntamenti</string>
    <string name="menurubrica">Rubrica</string>
    <string name="salvacontatto">Salva</string>
    <string name="cancella">Cancella</string>
    <string name="casa">Casa:</string>
    <string name="cellulare">Cellulare:</string>
    <string name="citta">Città:</string>
    <string name="cognome">Cognome:</string>
    <string name="email">Email:</string>
    <string name="nome">Nome:</string>
    <string name="telefono">Telefono</string>
    <string name="nomeappuntamento">Nome</string>
    <string name="prioritaappuntamento">Priorità</string>
    <string-array name="priorita_array">
    	<item>Alta</item>
        <item>Bassa</item>
    </string-array>
    <string name="coordinateappuntamento">Coordinate</string>
    <string name="titoloappuntamento">Titolo</string>
    <string name="luogoappuntamento">Luogo</string>
    <string name="indirizzoappuntamento">Indirizzo</string>
    <string name="dataappuntamento">dd/mm/aaaa</string>
    <string name="oraappuntamento">hh:mm</string>
    <string name="nuovoappuntamento">Nuovo Appuntamento</string>
    <string name="statoappuntamento">Stato</string>
    <string-array name="stato_array">
    	<item>In corso</item>
        <item>Completato</item>
    </string-array>
    <string name="infoappuntamento">Info</string>
    <string name="modificabutton">Modifica</string>
    <string name="eliminabutton">Elimina</string>
        
    

</resources>