<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/portrait" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/titolo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:inputType="textPersonName"
            android:text="@string/username" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login" />

        <Button
            android:id="@+id/button1"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button01"
            android:layout_alignBottom="@+id/Button01"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/Button01"
            android:text="@string/reset" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Button01"
            android:layout_marginBottom="42dp"
            android:layout_toLeftOf="@+id/button1"
            android:inputType="textPassword"
            android:text="@string/password" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

</LinearLayout>